--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"dictionary": "C:\\ProgramData\\Affinity\\Common\\2.0\\Dictionaries\\fi_FI\\fi_FI.dic", "theme": "default_theme.xml", "scale": "1", "encoding": "iso-8859-1"}
+{"dictionary": "/Users/anni/Koulu/AffinityPublisherFISpelling/fi_FI.dic", "theme": "default_theme.xml", "scale": "1", "encoding": "iso-8859-1"}
